<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.widget.CompoundButton" />

        <variable
            name="task"
            type="sample.app.employee.data.Employee" />

        <variable
            name="viewmodel"
            type="sample.app.employee.ui.EmployeeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/list_item_padding"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/list_item_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@{task.employee_name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/app_name" />
    </LinearLayout>
</layout>
